grammar.js
		source_file: $ => seq(
			optional($.shebang_line),
			optional(seq(repeat1($.file_annotation), $._semi)),
			optional($.package_header),
			repeat($.import_header),
			repeat(seq($._statement, $._semi))
		),

		_statement: $ => choice(
			$._declaration,
			seq(
				repeat(choice($.label, $.annotation)),
				choice(
					$.assignment,
					$._loop_statement,
					$._expression
				)
			)
		),

		_semi: $ => /[\r\n]+/,

		_expression: $ => choice(
			$._unary_expression,
			$._binary_expression,
			$._primary_expression
		),

		// Unary expressions

		call_expression: $ => prec.left(PREC.POSTFIX, seq($._expression, $.call_suffix)),

		expect_expression: $ => prec.left(PREC.EXPECT, seq("expect", $.call_suffix)),

		// Binary expressions

		multiplicative_expression: $ => prec.left(PREC.MULTIPLICATIVE, seq($._expression, $._multiplicative_operator, $._expression)),

		call_suffix: $ => prec.left(seq(
			// optional($.type_arguments), // TODO: Type args conflict with 'less than', see above
			choice(
				seq(optional($.value_arguments), $.annotated_lambda),
				$.value_arguments
			)
		)),

		value_arguments: $ => seq("(", optional(sep1($.value_argument, ",")), ")"),

		value_argument: $ => seq(
			optional($.annotation),
			optional(seq($.simple_identifier, "=")),
			optional("*"),
			$._expression
		),

		line_string_literal: $ => seq('"', repeat(choice($._line_string_content, $._interpolation)), '"'),

		_line_string_content: $ => choice(
			$._line_str_text,
			$._line_str_escaped_char
		),

		_interpolation: $ => choice(
			seq("${", alias($._expression, $.interpolated_expression), "}"),
			seq("$", alias($.simple_identifier, $.interpolated_identifier))
		),

		_multiplicative_operator: $ => choice("*", "/", "%"),

		simple_identifier: $ => $._lexical_identifier, // TODO

		integer_literal: $ => token(seq(optional(/[1-9]/), DEC_DIGITS)),

		_lexical_identifier: $ => choice(
			/[a-zA-Z_][a-zA-Z_0-9]*/,
			/`[^\r\n`]+`/
		),
