corpus/expressions.txt
==================
Multiplication expression
==================

45 * 3

---

(source_file (multiplicative_expression (integer_literal) (integer_literal)))

==================
Function calls
==================

print("Hello World!")
sum(1, 2)

---

(source_file
	(call_expression (simple_identifier)
		(call_suffix (value_arguments
			(value_argument (line_string_literal)))))
	(call_expression (simple_identifier)
		(call_suffix (value_arguments
			(value_argument (integer_literal))
			(value_argument (integer_literal))))))

==================
Expect expressions
==================

expect(1)

---

(source_file
  (expect_expression
    (call_suffix
      (value_arguments
        (value_argument
          (integer_literal))))))


==================
When expressions
==================

var weekDay = when(weekNumber){
	1 -> "MONDAY"
	2 -> "TUESDAY"
	3 -> "WEDNESDAY"
	4 -> "THURSDAY"
	5 -> "FRIDAY"
	6,7 -> "WEEKEND"	
	else -> "NOT POSSIBLE"
}

---
